# cp-badges

./: .gitignore  Dockerfile  Procfile  README.md  cp_badges.py  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-badges.yml
