[tool.poetry]
name = "cp-badges"
package-mode = false
version = "0.1.0"
description = "Competitive programming badges"
authors = ["Joonhyung Shin <joonhyung.shin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pybadges = "3.0.0"
fastapi = "^0.111.0"
setuptools = "^69.5.1"
uvicorn = "^0.30.1"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
