[tool.poetry]
name = "cp-badges"
package-mode = false
version = "0.1.0"
description = "Competitive programming badges"
authors = ["Joonhyung Shin <joonhyung.shin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pybadges = "3.0.0"
setuptools = "^69.5.1"
aiohttp = {extras = ["speedups"], version = "^3.9.5"}
litestar = {extras = ["redis", "standard"], version = "^2.21.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
